--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <html>
-
+TESTING
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
@@ -64,14 +64,5 @@
 	}
 </script>
 
-
-<a id="liveagent_button_online_573Hs000000tYhm" href="javascript://Chat" style="display: none;" onclick="liveagent.startChat('573Hs000000tYhm')"><!-- Online Chat Content --></a><div id="liveagent_button_offline_573Hs000000tYhm" style="display: none;"><!-- Offline Chat Content --></div>
-
-<script type="text/javascript">
-if (!window._laq) { window._laq = []; }
-window._laq.push(function(){liveagent.showWhenOnline('573Hs000000tYhm', document.getElementById('liveagent_button_online_573Hs000000tYhm'));
-liveagent.showWhenOffline('573Hs000000tYhm', document.getElementById('liveagent_button_offline_573Hs000000tYhm'));
-});
-</script>
 
 </html>
